test/negative/t6.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel
  {| function p (x:integer):integer = x |}[@@gospel
                                            {| requires x > 0
    variant x = 0
    ensures x = 2
    ensures x > 2
    ensures x > 1 |}]]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ function p ...
    variant ...
    requires ...
    ensures ...
    ensures ...
    ensures ...
     *)
File "t6.mli", line 13, characters 12-17:
Error: A term was expected.
